<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>apphub-service-skyxplore</artifactId>
        <groupId>com.github.saphyra</groupId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>apphub-service-skyxplore-data</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>apphub-service-skyxplore-data</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${versions.apache-commons.commons-io}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-api-platform-message_sender-client</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-api-skyxplore-data-server</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-api-user-client</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <version>${versions.spring-boot}</version>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${versions.postgresql-connector}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-lib-skyxplore-data</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-test-repository</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-test-api</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-lib-request_validation</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${versions.spring-boot}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-api-skyxplore-lobby-client</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-api-skyxplore-game-client</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-lib-config-liquibase</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
            <version>${versions.spring-boot}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${versions.guava}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-lib-skyxplore-ws</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${versions.spring-boot}</version>
                <configuration>
                    <finalName>application</finalName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${versions.maven-compiler-plugin}</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${versions.lombok}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${versions.exec-maven-plugin}</version>
                <executions>
                    <execution>
                        <id>docker-package</id>
                        <phase>install</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>docker</executable>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <arguments>
                                <argument>build</argument>
                                <argument>-f</argument>
                                <argument>Dockerfile</argument>
                                <argument>-t</argument>
                                <argument>saphyra/${project.artifactId}:latest</argument>
                                <argument>.</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
